zoom, shift color of marker depending on the direction of the bus, moved error handling of api fetch

--- a/real-time-bus-tracker.html
+++ b/real-time-bus-tracker.html
@@ -24,7 +24,7 @@
             container: 'map',
             style: 'mapbox://styles/mapbox/streets-v11',
             center: [-71.104081, 42.365554],
-            zoom: 14
+            zoom: 13
         });
 
         function init() {
@@ -34,34 +34,42 @@
                     busses.forEach((bus) => {
                         let lat = bus["attributes"]["latitude"];
 						let long = bus["attributes"]["longitude"];
-                        const marker = new mapboxgl.Marker()
+                        let dirColor;
+                        if (bus["attributes"]["direction_id"] === 1) {
+                            dirColor = "#ff0000";
+                        } else {
+                            dirColor = "#0000CD";
+                        }
+                        const marker = new mapboxgl.Marker({color: dirColor})
                             .setLngLat([long, lat])
                             .addTo(map);
                         
                         markers.push({id: bus["id"], bus_marker: marker})
                     })
                 }
-            ).catch(err => alert("An error occured setting markers: ", err))
+            )
 
             setInterval(refresh, 15000);
         }
 
         async function getBusLocations(){
 			const url = 'https://api-v3.mbta.com/vehicles?filter[route]=1&include=trip';
-			const response = await fetch(url);
-			const json     = await response.json();
+			const response = await fetch(url)
+                .catch(err => alert("An error occured fetching MBTA data", err));
+			const json = await response.json();
 			return json.data;
 		}
 
         async function refresh() {
             let busses = await getBusLocations();
             // set to true if bus is found 
-            let busStatus = false;
-
+            
             for (let i = 0; i < busses.length; i++) {
+                let busStatus = false;
                 for (let j = 0; j < markers.length; j++) {
                     if (busses[i]["id"] === markers[j]["id"]) {
                         console.log(`bus ${busses[i]["id"]} already exists`);
+                        // TODO shift color existing marker if direction changes
                         markers[i]["bus_marker"]
                             .setLngLat(
                                 [busses[i]["attributes"]["longitude"],
@@ -73,7 +81,13 @@
                 }
                 if (!busStatus) {
                     console.log(`bus ${busses[i]["id"]} not found`)
-                    const marker = new mapboxgl.Marker()
+                    let dirColor;
+                        if (bus["attributes"]["direction_id"] === 1) {
+                            dirColor = "#ff0000";
+                        } else {
+                            dirColor = "#0000CD";
+                        }
+                    const marker = new mapboxgl.Marker({color: dirColor})
                             .setLngLat(
                                 [busses[i]["attributes"]["longitude"], 
                                 busses[i]["attributes"]["latitude"]])
